fix: align items

--- a/style.css
+++ b/style.css
@@ -418,4 +418,6 @@ pre{
     border-radius: 10px;
     margin-top: 5px;  
     padding: 0 10px 0 10px;
+    align-items: center;
+    justify-content: space-evenly;
 }
